--- a/frontend/package.json
+++ b/frontend/package.json
@@ -32,6 +32,8 @@
     "@types/react-dom": "^19.1.6",
     "@vitejs/plugin-react": "^4.6.0",
     "autoprefixer": "^10.4.21",
+    "browserslist": "^4.25.1",
+    "caniuse-lite": "^1.0.30001727",
     "eslint": "^9.30.1",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
