--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "antd": "^5.26.5",
     "axios": "^1.10.0",
     "dayjs": "^1.11.13",
+    "esbuild": "^0.25.8",
     "i18next": "^25.3.2",
     "lucide-react": "^0.525.0",
     "react": "^19.1.0",
